# socialmedia-scrapper

./: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
