[project]
name = "socialmedia-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "snscrape>=0.7.0.20230622",
    "uvicorn>=0.35.0",
]
